--- a/Embedded Recipes/01.Hardware Collage.md
+++ b/Embedded Recipes/01.Hardware Collage.md
@@ -6,15 +6,292 @@
 
 Analog 신호 자체가 information이라고 한다면 에러도 많이 나고 고치지도 힘들다.
 
-But, 모든 정보를 Digital화 해서 받는 쪽에서Logic 1, Logic 0만 제대로 구분해 내면 깨끗한 디지털 신호로 reproduce할 수 있다는 장점이 있다. 
+But, 모든 정보를 Digital화 해서 받는 쪽에서Logic 1, Logic 0만 제대로 구분해 내면 깨끗한 디지털 신호로 reproduce할 수 있다는 장점이 있다.
 
 즉, 에러가 나도 FEC(forward error correction)나, CRC등을 이용해서 복구 하기 용이하니까, 조금 더 reliable하다는 뜻
 
 사실 voice만 따지면, 진짜 analog 신호를 Digital화 해서 만든거니까, 원래 voice를완벽하게 다시 복구하지는 못하지만, 뭐 그런대로 쓸만 하다...
 
- CDMA는 이런 Digital의 장점 뿐 아니라, Digital화를 한 후, channel을 Code로 Multiplexing하여, 여러사람이 동시에 나눠 쓸 수 있다는 장점도 있다.
- 
+CDMA는 이런 Digital의 장점 뿐 아니라, Digital화를 한 후, channel을 Code로 Multiplexing하여, 여러사람이 동시에 나눠 쓸 수 있다는 장점도 있다.
 
+##### 저항 (I=V/R)
 
+저항은 회로의 특정부분에 흐르는 전류의 양을 제한가능
 
+<u>저항을 무처럼 딱 잘랐을 때 단면적에 반비례하여 저항의 크기가 정해짐</u>
 
+즉, 단면적이 커지면, 전류가 잘 지나가고, 그 말은 결국 저항이 작다.
+
+반대로 단면적이 작아지면, 전류가 못지나가고, 그말은 또한 저항이 크다.
+
+또 하나는 길이 ➡️ 길이가 길어지면~ 전류가 지나가기 힘들어 한다.
+
+##### 커패시터 (dV/dt = I / C) [F/패럿]
+
+캐패시터의 경우에는 높은 주파수의 전압 일수록 저항을 못느끼고, 인덕터의 경우에는 높은 주파수의 전류 일수록 저항을 더 크게 느낌
+
+➡️ 커패시터 교류성분은 통과, 직류성분은 통과 못함
+
+➡️ 전압의 시간에 따른 변화율이 클수록 전류를 더 잘 통과시키며 저항이 작다.
+
+➡️ 교류전압만 통과시키는 역할을 하니까 `DC block`, `bypass cap` 이라고도 부름
+
+##### 인덕터 (V = L dI/dt) [H/헨리]
+
+전류가 변화하지 못하도록 함 -> 저주파의 전류만이 통과할 수 있음(급격한 신호 흐름 막음)
+
+➡️ 커패시터와 반대로 `AC blocking`, `choke`라고도 이라고도 함
+
+➡️  C와는 반대로 L의 경우 L값이 커지면 전류가 더 못흐름
+
+<br>
+
+### 💡정리
+
+> R의 경우 R이 클수록 전류를 더 조금 흐르게 할 수 있고,  
+> C의 경우 C가 작을 수록 전류는 더 조금 흐르게 할 수 있고,  
+> L의 경우 L이 클수록 전류는 더 조금 흐르게 합니다.
+
+> 주파수 측면에서 바라보면, 정해진 RLC값에서  
+> R은 주파수를 타지 않고,  
+> C는 높은 주파수 일수록 저항이 작고, (전류가 더 많이 흐르고)  
+> L은 높은 주파수 일수록 저항이 큽니다. (전류가 흐르기 어렵죠)
+
+✖️ L은 저주파 통과, C는 고주파 통과 라는 사실 덕분에 Noise를 제거할 때, filter로 많이 쓰임 (Lopw pass filter, High pass filter .. )
+
+예를 들면, L을 달아놓으면 저주파만 통과하고, C를 달아 놓으면 고주파만 빼낼 수 있다.
+
+✖️  학술적으로 순수하게 정전용량 (Capacitance)만을 가지는 **이상적인 소자**를 `캐패시터` 라고 부르고, 등가저항이나 등가 인덕턴스까지 고려한 **실제의 소재**를 `콘덴서`라고 부르는 경향
+
+![](https://blog.kakaocdn.net/dn/vpwoI/btsgnYmHVWF/f3RK2A4Xt2BvicV4eFvkCK/img.jpg)
+
+C는 AC입장에서 보면 short / 반대로 L은 AC입장에서 보면 open
+
+<br>
+
+##### Transistor
+
+`Transistor`는 Trans-Resistor 즉, 간단한 회로이론에 의하여, Resistor값을 변화 시킬 수 있다는 의미
+
+Resistor의 용도는 전류의 양을 조절하는 것
+
+그럼 **Transistor는 전류의 양을 마음껏 조절할 수 있다**는 말 !!
+
+ ![](https://blog.kakaocdn.net/dn/biG57d/btsgGjQjo9d/4Y65PC6rGIj8hWsUFD0iC0/img.jpg) npn형 트랜지스터
+
+B는 Transistor가 동작하게 하는 Switch역할이고, B에 의해 Switch가 ON되면 C와 E사이에전류가 흐르게 됨
+
+B를 얼마나 세게 누르느냐에 따라 C와 E사이에 흐르는 전류량도 바뀌게 되고, 그 얘기는 바로 저항값이 변함
+
+Switch를 세게 누른다는 건 무엇이냐 하면, B와 E사이에 전압을 얼마나 세게 주느냐의 문제라고한다면 ➡️**Transistor의 Technology**
+
+Switch (base)에 넣어주는 전압량(전류량)에 따라 포화영역, 활성영역, 차단영역이 생김
+
+- CE간에 전류가 B의 작은 입력에 대하여, 깜찍하게 휙휙 변해주는 영역을 **활성영역**
+  
+- B에 흐르는 전압(전류)가너무 낮아서 CE사이에 전류가 못흐르는 영역을 **차단영역**
+  
+- 마지막으로 B에 흐르는전압(전류)가 너무 높아서 CE사이의 전류가 더이상 흐르지 못하는 영역을 **포화영역**
+  
+
+Switching기능: 차단영역과, 포화영역을 이용하여, ON OFF를 표현
+
+증폭기능(Amplifier): 활성영역에서 이용(아주 작은 전압 신호를 B에 흘려주면 CE간에 전류가 더 큰 폭으로 휙휙 움직이는 원리)
+
+<br>
+
+|     | C   | L   |
+| --- | --- | --- |
+| 저주파수 | 저항 큼 | 저항 작음 |
+| 고주파수 | 저항 작음 | 저항 큼 |
+
+**L대신 R을 넣고 사용해도 괜찮지 않겠는가 하는 의문이 들테지만,**
+
+L을 넣는 경우는 보통 그냥 코일이 아니라, bead라고 부르는 Inductor의 한 종류를 삽입하는데, 이 bead의 특성이 특정 주파수에서 저항의 역할을 톡톡히 하여, 마치 공진기 처럼 특정 주파수를 없애 버리는 역할도 같이 함
+
+➡️ <u>**결국 R을 넣으면, 전체적으로 줄어 들긴 하나 특정 주파수를 제거하지는 못하지만, L을 넣으므로서 AC를 전체적으로 죽이면서도 특정 주파수를 죽여버릴 수 있는 장점**</u>
+
+<br>
+
+### 논리회로
+
+![](https://blog.kakaocdn.net/dn/bHpHgz/btsgGmlWhKF/BAQ4PlofyedqDG0L7JVGc0/img.jpg)
+
+![](https://blog.kakaocdn.net/dn/bsvpeI/btsgC5eLDYH/aX4383vVnStzDNeXgUsZY1/img.jpg)
+
+ Vcc는 Collector 전원, Vee는 Emitter전원, Vdd는 Drain 전원, Vss는 Source전원
+
+➡️ 요약하면, Vcc, Vdd는 전원으로 연결되고, Vee, Vss는 보통 Gound 단에 연결
+
+<br>
+
+### IC
+
+![](https://blog.kakaocdn.net/dn/b2wqxr/btsgCBkCobS/my9KFfMHuyzJ5WmAKJ53kk/img.jpg)
+
+1, 2, 6번 pin의 NC는 No connection으로서 아무것도 연결하지 말라는 의미
+
+➡️ 보통 이런 pin들은 어떻게 처리해야 하는지, Device spec을 잘 읽어 봐야함
+
+3번 pin의 clock에 대한 삼각형은 edge trigger를 의미
+
+➡️ edge trigger라는건 clock이 High, Low일때 IC가 동작하는게 아니라, 올라 갈 때 또는 내려갈 때 동작하는 것을 의미
+
+4번은 Ground, 5번은 전원 VCC고요, 7, 8번은 Data in/ out
+
+<br>
+
+##### Register
+
+Register는 Flip Flop의 집합이며,
+
+이 `Flip Flop`이라는 것은 각각 1bit의 정보를 저장할 수 있는 것들을 의미
+
+-> `n-bit Register`라는 것은 n bit의 정보를 저장할 수 있는 - 결국 n개의 Flip Flop으로 이루어진 - Flip Flop의 Group을 말하는 것
+
+`Latch`: 1bit, 즉 1 또는 0인지를 기억할 수 있는 소자를 통칭 (ex. Flip/ Flop)
+
+![](https://blog.kakaocdn.net/dn/ufrfB/btsgEfO4sP3/nkPKAitPfdlkTveX8kCuQ1/img.jpg)
+
+R은 Data out에 대한 Reset, S는 Data out에 대한 set
+
+➡️ R과 S는 같은 값을 가져서는 안된다
+
+Data In은 S와 R에 들어갈 Data니까 S쪽에는 Data 그대로, R쪽에는 Data를 Invert해서 넣으면 되고 더 중요한 것은 **이런 Flip Flop 회로는 다음 input이 들어올 때 까지 Data Out을 유지하고 있다**는 점
+
+➡️결국 Memory 기능을 가지고 있다 (이런 Flip flop을 RS Flip flop)
+
+ ➡️ 다음 input이라는 것은 Write 신호가 TRUE가 된 경우에만 Data In이 입력이 되고 D0에 기억 - 유지
+
+![](https://blog.kakaocdn.net/dn/kxE0j/btsgEdpHofJ/U6QDFtWi8FjxM2USspZPR0/img.jpg)
+
+DI는 Data In, DO는 Data out, W는 Write Enable 신호
+
+- Latch를 이용하여뭔가를 잠시 저장하는데 Latch들을 이용
+  
+- DO에 뭔가 Data processing 회로를 달아서 DO가 TRUE가 되는 순간 뭔가 일을 할 수 있게함
+  
+
+Regsiter란 이런 Latch 여러개 또는 Flip flop 여러개를 엮어서 n bit로 만든 것
+
+> Register는 크게 2가지 종류
+> 
+> **General Purpose Register**
+> 
+> - Address Register : 외부메모리에 쓰거나 읽을 때, data가 들어 있는 주소를 가르키는 값을 넣어두는 Register
+> - Data Register : 외부메모리에서 읽어온 값을 임시 저장하는 Register이며, 자세히는 Data input register, Data output register로 구성.
+> - Instruction Pipeline Register : 외부 메모리에서 읽어온 Op-code (명령어)를 저장하는 Register
+> 
+> **Special Purpose Register**
+> 
+> - Program Counter : 현재 실행되고 있는 주소를 가르키는 register
+> - Stack pointer : 현재 사용하고 있는 stack영역에서 마지막에 데이터가 push된 곳의 주소를 가르키는 register
+> - Linked Register : 방금까지 수행하다가 jump를 했을 경우, 돌아갈 곳의 주소를 가르키는 register (말이 좀 이상하니까, 이해하려 하지 말고, 그런게 있다 정도로만 지나가 주세요. 부탁) 
+> - Status Register : MCU의 현재 상태를 나타내는 Register. 예를 들면, 현재의 mode라던가, 계산의 결과값의 상태등을 저장.
+
+I/O Register: D Flip Flop으로 구성되어 방금 저장된 값을 기억하기도 하고, 밀어내는 역할
+
+Register들은 보통 MPU의 word값과 같은 크기를 갖지만, I/O Register들은 필요한 크기 만큼만 가짐
+
+\<br>
+
+모든 Digital회로는 Clock에 의해서 그 동작이 결정된다 ->  Clcok이 똑닥똑닥 `Synchronization`을 맞추어 줘야 함
+
+각 디바이스들은 자기가 동작할 수 있는 시간적인 동작 범위가 있으니까 무조건 빠르다고 될 일은 아니다. <u>각각 자기가 소화할 수 있는 속도가 있다는 말!</u>
+
+예를 들면 TR이나, FET는 스위칭 특성이 있어서, 입력신호가 들어온 후 출력시간이 나오기 까지 약간의 시간이 걸리며, 그 시간을 delay time
+
+그 원인 중 하나는 완전한 High 신호를 줄때 10%~90%로 올라가기 까지상승시간이 걸리며, 모든 신호의 변화는 이런 rising 또는 falling delay를 갖게 됨
+
+<br>
+
+스위칭 특성: delay time에 대한 전기적 특성
+
+상승시간(tTLH 또는 tr): 완전한 신호 'H'일때의 전압을 기준으로 10%에서 90%로 올리기까지 필요한 시간
+
+하강시간(tTHL 또는 tf): 90%에서 10%로 내리기까지 필요한 시간 (Tim High to Low, falling time)
+
+ XIP: 메모리 상에서 직접 program/ code를 실행 할 수 있는 기술, 기본조건으로는 Random Access가 가능해야함
+
+➡️Byte/ Word/ 등의 크기를 직접 Access가 가능해야 한다는 뜻이며, 모든 RAM은 이런 요건을 충족, RAM에 program/ Execution image를 올리기만 하면 실행 가능하다
+
+<u>Embedded System에서는 쓰고 "지울" 수 있는 Flash Memory가 ROM으로 가장 많이 애용</u>
+
+비쌈: NOR > NAND
+
+- NOR는 Cell이 병렬로 연결되어 있으며 병렬로 연결되어 있다 보니, Address Line과 Data Line을 모두 가질 수 있으며 RAM처럼 byte단위로 Random Access가 가능
+  
+- NOR는 XIP를 지원 ➡️ **XIP를 지원한다 = Software을 직접 실행할 수 있다**
+  
+
+✖️ NAND나 NOR의 erase는 0으로 지우는 것이 아니라, charging을 하는 경우라서 지우고 난 block은 모두 1로 채워져 있어서 16진수로 보면 0xFF로 가득 차 있다.
+
+<br>
+
+CPU: CU에서 명령어를 해석하여 다른 Unit에 동작을 지시하는 일
+
+- Decoder는 명령어를 읽어서 해석하는 일을 하며
+  
+- 이에 대하여 CU는 각종 제어 신호를 발생
+  
+  - 예를 들어 ALU에게 더하기를 하라는 신호를 발생시킨다던가, 또는 메모리에게 특정 주소를 Read할 수 있도록 신호를 발생시킨다든가 하는 여러 가지 Control signal
+    
+  - ALU는 산술연산을 하게 되고 또한 이런 산술연산이나, 제어에 관련한 결과 등을 임시 저장하는 Register file을 가지고 있음
+    
+
+> 💡 **정리**
+> 
+> CU -> 앞서 말했던 전기적인 신호 (명령)에 대해서 반응 하는 논리회로의 집합
+> 
+> ALU -> 계산을 하는 논리회로의 집합
+> 
+> CU가 일차적으로 반응을 하면서 CPU내 외부의 모든 control을 하게 되는데,
+> 
+> 그 control이라는 것도 다른 unit에서 볼 때는 약속된 전기적 신호를 말하는 것
+
+<br>
+
+### CPU 내부
+
+**특정한 목적의 Register만 먼저 살펴보자**
+
+PC : Program Counter : CPU가 현재 실행하고 있는 instruction의 주소를 가리킴.
+
+IR : PC가 가리키는 Instruction의 주소에서 읽어온 insturction을 담아두는 기억장소  
+Address Register : 현재 사용하는 Data를 access하기 위한 data의 주소를 가리키는 값을 담아두는 기억장소.
+
+Data Register : Address Register가 가리키는 주소의 실제 값
+
+ACC : 특수한 register로서, 연산에 사용되는 값들을 저장하며, 연산의 결과값을 잠시 저장하는 일이 많으며, 외부 사용자가 직접 access할 수 있는 register가 아니고, CPU 혼자 독식하는 register입니다.
+
+**Register들 이외의 기본적인 CPU의 Component들은**
+
+Decoder : IR에 가져온 instruction을 해석하여 CU에 넘김.
+
+CU : Central Unit, Decoder에서 받아온 것을 각종 제어 신호로 변환하여 제어신호를 발생 시킴
+
+ALU : 산술 연산을 담당하는 unit
+
+✔️ CPU라는 건 항상 정해진 규칙에 의해서 일을 하죠.항상 똑같은 일을 하고 있습니다.
+
+그 step으로는
+
+1. instruction을 메모리로부터 가져오고 (Fetch)
+2. 가져온 Instruction을 해석해서 어떤 일을 하는 녀석이냐를 알아보고 Register 값들도 확인, (Decode)
+3. Decoding된 Instruction을 실행한다. (Execution)
+
+![](https://blog.kakaocdn.net/dn/bMlRPD/btsgL81YCuf/X6DxoDF7FvKKs2eTJwWuOK/img.jpg)
+
+일단 무엇을 하든 이런 식으로<u> Fetch/ Decode/ Execution</u>을 순서대로 한다라는 의미에서라면, 다시 말해, 이렇게 Sequential하게 3가지 일을 한다면, 한가지 일을 열라 할 때 나머지 2개가 놀고 있겠군,,,
+
+조금 더 CPU가 효율적으로 움직이게 할 수 있지 않을까 하는 idea에서부터 **pipe line**이 생겨남
+
+➡️ Decode하는 동안에는 그 다음 번 instruction을 Fetch해 오면 되지 않을까? 하는 idea로 부터 출발하여, 한번 동작할 때 서로 CPU의 다른 부분을 사용하는 Fetch/ Decode/ Execution을 한꺼번에 실행해 보자 까지 생각의 흐름
+
+![](https://blog.kakaocdn.net/dn/dfPMrR/btsgG5EHIZv/4zZpW6wK84naABfZbbiYsk/img.jpg)
+
+ Pipe line이 많아지면 많을 수록 좋아질 것입니다만 너무 많은 stage는 효율성 면에서 성능이 더 좋아지지 않고, 나빠진다고 봐야함 즉, 마구잡이로 늘리는건 비추
+
+✔️ PC는 항상 Fetch하고 있는 곳을 가리킴
+
+✔️ 고로, 현재 Execution하고 있는 곳보다 앞서가고 있음
