--- a/ARM아키텍처/01.ARMv8아키텍쳐__명령어와 레지스터.md
+++ b/ARM아키텍처/01.ARMv8아키텍쳐__명령어와 레지스터.md
@@ -2,25 +2,23 @@
 
 ### 간단한 어셈블리 코드 분석과 ARM 아키텍쳐/주요 명령어
 
-![](C:\Users\yj.kim\AppData\Roaming\marktext\images\2023-08-28-13-48-54-image.png)
+ ![](assets/2023-08-28-13-56-08-image.png)
 
 ✔️ 메모리 인스트럭션 이해하기
 
 - *인스트럭션*(instruction)은 컴퓨터에게 일을 시키는 단위로서, 컴퓨터가 알아들을 수 있는 기계어로 이루어져 있는 명령
 
-<img src="file:///C:/Users/yj.kim/AppData/Roaming/marktext/images/2023-08-28-13-36-10-image.png" title="" alt="" width="673">
+![](assets/2023-08-28-13-56-38-image.png)
 
- LDP, STP의 P는 **Pair** ![](C:\Users\yj.kim\AppData\Roaming\marktext\images\2023-08-28-13-36-26-image.png)
+ LDP, STP의 P는 **Pair** SP -> Stack Point
 
-SP -> Stack Point
+![](assets/2023-08-28-13-57-08-image.png)
 
 ##### 기본 인스트럭션 이해하기
 
-![](C:\Users\yj.kim\AppData\Roaming\marktext\images\2023-08-28-13-46-48-image.png)
+![](assets/2023-08-28-13-57-25-image.png)
 
-![](C:\Users\yj.kim\AppData\Roaming\marktext\images\2023-08-28-13-47-29-image.png)
-
-<br>
+![](assets/2023-08-28-13-57-39-image.png)<br>
 
 ### ABI 개념과 ARMv8 레지스터
 
