01.ARMv8 아키텍쳐:명령어와 레지스터

--- a/ARM아키텍처/01.ARMv8아키텍쳐__명령어와 레지스터.md
+++ b/ARM아키텍처/01.ARMv8아키텍쳐__명령어와 레지스터.md
@@ -2,7 +2,9 @@
 
 ### 간단한 어셈블리 코드 분석과 ARM 아키텍쳐/주요 명령어
 
- ![](assets/2023-08-28-13-56-08-image.png)
+ ![](assets/2023-08-28-15-34-12-image.png)✔️ 사용자 프로그램이 디스크 파일을 접근하거나 화면에 결과를 출력하는 등의 작업이 필요한 경우, 즉 **사용자 프로그램이 특권 명령의 수행을 필요로 하는 경우, 운영체제에게 특권 명령의 대행을 요청하는 것**이 `시스템 콜`
+
+
 
 ✔️ 메모리 인스트럭션 이해하기
 
@@ -10,7 +12,9 @@
 
 ![](assets/2023-08-28-13-56-38-image.png)
 
- LDP, STP의 P는 **Pair** SP -> Stack Point
+LDR, STR같이 R로 끝나는건 레지스터에 뭘 한다는 뜻
+
+LDP, STP의 P는 **Pair** / SP -> Stack Point
 
 ![](assets/2023-08-28-13-57-08-image.png)
 
@@ -21,5 +25,39 @@
 ![](assets/2023-08-28-13-57-39-image.png)<br>
 
 ### ABI 개념과 ARMv8 레지스터
+
+ABI(Application Binary Interface): OS, CPU, 컴파일러등 ... 이 함께 바이너리를 어떻게 맞출지 약속
+
+- 가상메모리
+
+- ELF (바이너리 포매)
+
+- 시스템 콜 넘버
+
+- 함수 호출 규약 ...
+
+##### ARMv8 주요 레지스터
+
+레지스터: 휘발성으로 데이터를 저장하는 공간
+
+- 휘발성 덕분에 프로그램을 메모리에 올렸다가 CPU에서 실행하면 굉장히 빨리 처리할 수 있음
+
+![](assets/2023-08-28-15-36-53-image.png)
+
+pc == program counter (다음 실행할 명령어 주소 담고 있음)
+
+![](assets/2023-08-28-15-50-08-image.png)
+
+![](assets/2023-08-28-16-29-06-image.png)
+
+<br>
+
+## Stack 메모리 추적과 분석
+
+<img title="" src="assets/2023-08-28-16-32-58-image.png" alt="" width="596" data-align="center">
+
+ stack -> 주소 값이 높음
+
+<img title="" src="assets/2023-08-28-16-41-01-image.png" alt="" width="512" data-align="center">![](assets/2023-08-28-16-42-31-image.png)
 
 
