--- a/ARM아키텍처/05.ARMv8-A 메모리 구조와 테스트.md
+++ b/ARM아키텍처/05.ARMv8-A 메모리 구조와 테스트.md
@@ -19,15 +19,13 @@
 
 4. **Application Data (애플리케이션 데이터)**:
    
-   - 애플리케이션 데이터 영역은 사용자 응용 프로그램의 데이터를 저장함. 이 데이터는 각 프로세스의 상태나 정보를 나타내며, 프로세스 간에 분리되어야 함.
+   - 애플리케이션 데이터 영역은 사용자 응용 프로그램의 데이터를 저장함. 이 데이터는 각 프로세스의 상태나 정보를 나타내며, 프로세스 간에 분리되어야 함
 
 5. **Application Code (애플리케이션 코드)**:
    
    - 애플리케이션 코드 영역에는 사용자 응용 프로그램의 실행 코드가 저장됨. 이 코드는 사용자의 요구에 따라 기능을 수행하며, 각 프로세스마다 별도의 가상 주소 공간을 할당받아 실행됨
 
 ✔️ 주변 장치, 운영체제 커널, 응용 프로그램 등 각 요소가 메모리에 고유한 위치를 갖는 것은 시스템의 안정성, 보안 및 성능을 보장하는 데 중요하다!
-
-
 
 ![](assets/2023-08-30-11-13-10-image.png)
 
