--- a/ARM아키텍처/06.ARMv8캐시(Cache).md
+++ b/ARM아키텍처/06.ARMv8캐시(Cache).md
@@ -65,3 +65,49 @@
 ![](assets/2023-08-30-15-37-25-image.png)<img src="assets/2023-08-30-15-40-12-image.png" title="" alt="" width="254"><img title="" src="assets/2023-08-30-15-42-59-image.png" alt="" width="317">
 
 `PIPT(Physical Index, Physical Tag)`: CPU 캐시의 동작 모드 중 하나인 캐시 일관성 모드를 나타내는 약어 이 모드는 캐시와 메모리 간의 데이터 일관성을 관리하는 방식을 의미
+
+![](assets/2023-08-30-15-52-02-image.png)
+
+<br>
+
+### ARMv8 L1 cache 추적과 메모리오더링 이해
+
+![](assets/2023-08-30-15-52-22-image.png)
+
+1. **순차실행 (Sequential Execution)**:
+   
+   - 순차실행은 코드가 작성된 순서대로 명령어가 실행되는 것
+   - 하나의 명령어가 완료된 후에 다음 명령어가 실행됨 대부분의 프로그래밍 언어에서의 디폴트 동작
+
+2. **비순차 실행 (Out-of-Order Execution)**:
+   
+   - 모던 프로세서는 성능 향상을 위해 명령어의 독립성을 파악하고, <u>순서가 바뀌어도 올바른 결과를 유지할 수 있는 경우</u> 명령어들을 재배치하여 실행
+
+3. **예측실행 (Speculative Execution)**:
+   
+   - 프로세서는 분기 명령어의 결과를 예측하여 분기를 따라 미리 명령어를 실행 이를 통해 예측이 맞았을 때 지연시간을 줄이고 성능을 향상시킴
+
+4. **예측 로딩 (Speculative Loading)**:
+   
+   - 분기 예측에 따라 미리 데이터를 로드하여 캐시에 저장하는 기술 분기 예측이 맞았을 때 데이터에 빠르게 접근할 수 있도록 함
+
+5. **읽기쓰기 최적화 (Read-Write Optimization)**:
+   
+   - 프로세서는 데이터를 읽을 때 해당 데이터를 자주 사용한다고 판단하면 미리 로드하여 캐시에 저장하는 것. 성능을 향상시키는 데 도움이 됨
+
+![](assets/2023-08-30-15-52-38-image.png)
+
+1. **ISB (Instruction Synchronization Barrier)**
+   
+   - ISB는 명령어의 순서와 메모리 액세스의 순서를 동기화하는 데 사용
+   - 이전에 실행한 명령어들의 결과가 메모리에 반영되기 전에 ISB를 사용하여 뒤따르는 명령어들이 실행되지 않도록 보장
+
+2. **DMB (Data Memory Barrier)**
+   
+   - DMB는 데이터의 순서와 메모리 액세스의 순서를 동기화하는 데 사용
+   - DMB를 사용하여 이전에 작성한 데이터가 메모리에 반영되기 전에 뒤따르는 데이터 쓰기 작업이 발생하지 않도록 보장
+
+3. **DSB (Data Synchronization Barrier)**
+   
+   - DSB는 데이터와 명령어의 순서와 메모리 액세스의 순서를 동기화하는 데 사용
+   - DSB를 사용하여 이전에 작성한 데이터와 명령어가 메모리에 반영되기 전에 뒤따르는 데이터 및 명령어 작업이 발생하지 않도록 보장
