0831 임베디드C프로그래밍

--- a/ARM임베디드리눅스중급/00.임베디드C프로그래밍.md
+++ b/ARM임베디드리눅스중급/00.임베디드C프로그래밍.md
@@ -65,3 +65,7 @@ while(i < 10) {
 간단히 말하면, `volatile` 변수는 프로그램이 뜻하지 않게 값을 바꿀 수 있는 상황에서 컴퓨터가 값을 예측하거나 최적화하지 않도록 해주는 것이다.
 
 ![](assets/2023-08-31-11-38-17-image.png)
+
+![](assets/2023-08-31-16-48-50-image.png)
+
+![](assets/2023-08-31-16-48-59-image.png)
