0906 Update Seminar.md

--- a/세미나 준비.md
+++ b/세미나 준비.md
@@ -1,5 +1,29 @@
 # 📖 세미나 준비
 
+1. ARM 개념과 기본 구조
+   
+   - pipline 슈퍼바이저 exception모드 user모드 ... 
+   
+   - cpsr
+
+2. ARM process & Boot
+   
+   - p 350 기반
+     
+     - boot loader
+     
+     - startup code
+
+3. Build system
+   
+   1. memory map
+
+p130 인터럽트 exception처리방식
+
+✖️ 이때까지 공부한거도 좀 써먹어야함 .... 
+
+---
+
 ## ARM 아키텍쳐 완전정복
 
 ARM 소개와 ARMv8 아키텍쳐
