UPDATE 0920TIL: wathdog, rules.mk

--- a/TIL/230920.md
+++ b/TIL/230920.md
@@ -6,11 +6,11 @@
 
 - 타임아웃 되기 전 SW명령어로 그 값을 clear 시켜주지 않으면 MCU를 reset시켜 시스템을 정상적으로 동작하고 있느지 감시하고 지속적인 오작동을 방지하는 신뢰성 향상 기술
 
+➡️ 다시 말해서 `안전모드`
 
 
 
-
-
+##### rules.mk
 
 
 
